--- a/index.html
+++ b/index.html
@@ -2105,42 +2105,21 @@ let visibleMarkers = []; // Marcadores atualmente renderizados
 let updateMarkersTimeout = null;
 let lastBounds = null; // Cache do último bounds calculado
 let lastZoom = null; // Cache do último zoom
-let qrScannerLoaded = false; // Flag para lazy loading do QR scanner
-let isMapMoving = false; // Flag para detectar movimento do mapa
-let mapIdleTimeout = null; // Timeout para detectar quando mapa parou de mover
-let markerPool = []; // Pool de marcadores reutilizáveis (memory pooling)
 
 function addDeliveryMarkers() {
     console.log('🎯 Inicializando sistema de marcadores otimizado (viewport-based)');
 
     // Preparar todos os pontos de entrega (apenas uma vez)
-    // Otimização: reduzir precisão de coordenadas para 6 casas decimais (suficiente para ~10cm de precisão)
     allDeliveryPoints = Object.entries(addressDatabase).map(([qrCode, data]) => ({
         qrCode,
-        position: {
-            lat: Number(data.latitude.toFixed(6)),
-            lng: Number(data.longitude.toFixed(6))
-        },
+        position: { lat: data.latitude, lng: data.longitude },
         address: data.address
     }));
 
     console.log(`📍 ${allDeliveryPoints.length} pontos de entrega preparados`);
 
     // Criar marcadores apenas quando necessário (zoom perto)
-    // Otimização: usar 'idle' em vez de listeners contínuos
-    google.maps.event.addListener(map, 'idle', () => {
-        isMapMoving = false;
-        updateVisibleMarkers();
-    });
-
-    // Detectar início de movimento para pausar renderizações pesadas
-    google.maps.event.addListener(map, 'dragstart', () => {
-        isMapMoving = true;
-    });
-
-    google.maps.event.addListener(map, 'zoom_changed', () => {
-        isMapMoving = true;
-    });
+    google.maps.event.addListener(map, 'idle', updateVisibleMarkers);
 
     // Renderizar marcadores iniciais
     updateVisibleMarkers();
@@ -2148,12 +2127,7 @@ function addDeliveryMarkers() {
 
 // Atualizar marcadores baseado no viewport e zoom atual
 function updateVisibleMarkers() {
-    // Não processar se mapa estiver em movimento (otimização crítica)
-    if (isMapMoving) {
-        return;
-    }
-
-    // Debounce agressivo para evitar atualizações muito frequentes
+    // Debounce para evitar atualizações muito frequentes
     if (updateMarkersTimeout) {
         clearTimeout(updateMarkersTimeout);
     }
@@ -2176,10 +2150,7 @@ function updateVisibleMarkers() {
         lastBounds = bounds;
 
         // REGRA: Só mostrar marcadores quando zoom >= 15 (bem próximo)
-        // De longe (zoom < 15): apenas rota
-        // De perto (zoom >= 15): rota + marcadores na viewport
         if (zoom < 15) {
-            // Zoom distante: remover todos os marcadores (e retornar ao pool)
             clearVisibleMarkers();
             console.log('🔭 Zoom distante: marcadores ocultados');
             return;
@@ -2188,15 +2159,12 @@ function updateVisibleMarkers() {
         // Usar requestIdleCallback para processar quando navegador estiver ocioso
         if ('requestIdleCallback' in window) {
             requestIdleCallback(() => {
-                if (!isMapMoving) { // Double-check que mapa não começou a mover
-                    renderMarkersInViewport(bounds);
-                }
+                renderMarkersInViewport(bounds);
             }, { timeout: 500 });
         } else {
-            // Fallback para navegadores sem suporte
             renderMarkersInViewport(bounds);
         }
-    }, 400); // Aumentado de 300ms para 400ms (menos atualizações)
+    }, 300);
 }
 
 // Função separada para renderizar marcadores (pode ser chamada via requestIdleCallback)
@@ -2238,36 +2206,25 @@ function updateMarkerSet(newPoints) {
     });
 }
 
-// Criar marcador ultra-leve (círculo SVG simples) com memory pooling
+// Criar marcador ultra-leve (círculo SVG simples)
 function createLightweightMarker(point) {
     // Usar requestAnimationFrame para renderização suave
     requestAnimationFrame(() => {
-        let circle;
-
-        // Memory pooling: reutilizar marcador do pool se disponível
-        if (markerPool.length > 0) {
-            circle = markerPool.pop();
-            circle.setCenter(point.position);
-            circle.setMap(map);
-            circle.setVisible(true);
-        } else {
-            // Criar novo círculo apenas se pool vazio
-            circle = new google.maps.Circle({
-                map: map,
-                center: point.position,
-                radius: 12, // 12 metros de raio (menor = mais leve)
-                fillColor: '#ea4335',
-                fillOpacity: 0.85,
-                strokeColor: '#ffffff',
-                strokeWeight: 2,
-                strokeOpacity: 1,
-                clickable: true,
-                zIndex: 100,
-                // Otimizações adicionais
-                optimized: true, // Renderização otimizada do Google Maps
-                visible: true
-            });
-        }
+        // Criar círculo SVG leve
+        const circle = new google.maps.Circle({
+            map: map,
+            center: point.position,
+            radius: 12,
+            fillColor: '#ea4335',
+            fillOpacity: 0.85,
+            strokeColor: '#ffffff',
+            strokeWeight: 2,
+            strokeOpacity: 1,
+            clickable: true,
+            zIndex: 100,
+            optimized: true,
+            visible: true
+        });
 
         // InfoWindow para mostrar endereço ao clicar (lazy loading)
         let infoWindow = null;
@@ -2297,26 +2254,15 @@ function createLightweightMarker(point) {
     });
 }
 
-// Limpar todos os marcadores visíveis (com memory pooling)
+// Limpar todos os marcadores visíveis
 function clearVisibleMarkers() {
     visibleMarkers.forEach(marker => {
-        // Remover do mapa
         marker.marker.setMap(null);
-
-        // Fechar infoWindow se existir
         if (marker.infoWindow) {
             marker.infoWindow.close();
         }
-
-        // Retornar marcador ao pool para reutilização (memory pooling)
-        markerPool.push(marker.marker);
     });
     visibleMarkers = [];
-
-    // Limitar tamanho do pool para não usar memória demais
-    if (markerPool.length > 50) {
-        markerPool = markerPool.slice(0, 50);
-    }
 }
 
 // ===========================
@@ -2460,26 +2406,18 @@ async function openModal() {
     modal.classList.add('active');
     document.body.style.overflow = 'hidden';
 
-    // Lazy loading: só iniciar câmera quando modal abrir pela primeira vez
-    if (!qrScannerLoaded) {
-        console.log('📷 Lazy loading: inicializando QR scanner...');
-        qrScannerLoaded = true;
+    // Abrir câmera automaticamente
+    try {
+        await startCamera();
+    } catch (error) {
+        console.error('Erro ao abrir câmera:', error);
+        showToast(
+            'Erro ao abrir câmera',
+            'Verifique as permissões do navegador',
+            'error',
+            5000
+        );
     }
-
-    // Abrir câmera automaticamente (com pequeno delay para renderizar modal primeiro)
-    setTimeout(async () => {
-        try {
-            await startCamera();
-        } catch (error) {
-            console.error('Erro ao abrir câmera:', error);
-            showToast(
-                'Erro ao abrir câmera',
-                'Verifique as permissões do navegador',
-                'error',
-                5000
-            );
-        }
-    }, 100); // 100ms delay para modal renderizar primeiro
 }
 
 // Fechar modal
@@ -3027,9 +2965,10 @@ function escapeHtml(text) {
     return div.innerHTML;
 }
 
-// Lazy loading: carregar clientes apenas quando sidebar abrir
-// (removido carregamento automático no início para melhor performance inicial)
-// loadClients() será chamado quando btnOpenSidebar for clicado
+// Carregar clientes ao inicializar
+setTimeout(() => {
+    loadClients();
+}, 2000);
 
 // ===========================
 // SISTEMA DE ROTAS DE ENTREGA
@@ -3344,12 +3283,6 @@ async function drawRouteInSegments(allPoints, totalDeliveries) {
         const segment = segments[i];
 
         try {
-            console.log(`🚗 Chamando Directions API para segmento ${i + 1}/${segments.length}:`, {
-                origin: segment.origin,
-                destination: segment.destination,
-                waypoints: segment.waypoints.length
-            });
-
             const result = await new Promise((resolve, reject) => {
                 directionsService.route({
                     origin: segment.origin,
@@ -3359,10 +3292,8 @@ async function drawRouteInSegments(allPoints, totalDeliveries) {
                     travelMode: google.maps.TravelMode.DRIVING
                 }, (result, status) => {
                     if (status === 'OK') {
-                        console.log(`✅ Directions API retornou para segmento ${i + 1}: ${status}`);
                         resolve(result);
                     } else {
-                        console.error(`❌ Directions API FALHOU para segmento ${i + 1}: ${status}`);
                         reject(new Error(`Segment ${i + 1} failed: ${status}`));
                     }
                 });
@@ -3376,9 +3307,6 @@ async function drawRouteInSegments(allPoints, totalDeliveries) {
 
             // Criar polyline para este segmento
             const path = result.routes[0].overview_path;
-
-            // DEBUG: verificar se o path está correto
-            console.log(`Segmento ${i + 1}: ${path.length} pontos no caminho`);
 
             const polyline = new google.maps.Polyline({
                 path: path,
@@ -3398,16 +3326,7 @@ async function drawRouteInSegments(allPoints, totalDeliveries) {
             console.log(`Segmento ${i + 1}/${segments.length} desenhado: ${segment.waypoints.length + 2} pontos`);
 
         } catch (error) {
-            console.error(`❌ ERRO CRÍTICO no segmento ${i + 1}:`, error);
-            console.error(`Detalhes do erro:`, error.message);
-
-            // Mostrar toast de erro
-            showToast(
-                `Erro no segmento ${i + 1}`,
-                error.message || 'Falha ao calcular rota',
-                'error',
-                5000
-            );
+            console.error(`Erro no segmento ${i + 1}:`, error);
         }
 
         // Pequeno delay entre requisições para evitar rate limit
