--- a/index.html
+++ b/index.html
@@ -1985,8 +1985,9 @@ function startLocationTracking() {
                 hideLoadingScreen();
                 showAddClientButton(); // Mostrar botão adicionar cliente
 
-                // Adicionar marcadores de entrega após carregar o mapa
-                addDeliveryMarkers();
+                // NÃO adicionar marcadores automaticamente (deixa o mapa leve)
+                // Os marcadores serão adicionados apenas ao ativar o modo de rota
+                console.log('Mapa carregado. Marcadores serão exibidos ao calcular rota.');
             } catch (error) {
                 console.error('Erro ao criar marcador:', error);
                 hideLoadingScreen();
@@ -2076,113 +2077,143 @@ function handleGeoError(error, isInitial = false) {
 // MARCADORES DE ENTREGAS
 // ===========================
 
+// ===========================
+// RENDERIZAÇÃO OTIMIZADA DE MARCADORES
+// Apenas marcadores visíveis + baseados em zoom
+// ===========================
+
+let allDeliveryPoints = []; // Cache de todos os pontos
+let visibleMarkers = []; // Marcadores atualmente renderizados
+let updateMarkersTimeout = null;
+
 function addDeliveryMarkers() {
-    console.log('Adicionando marcadores de entrega...');
+    console.log('🎯 Inicializando sistema de marcadores otimizado (viewport-based)');
 
-    // Limpar marcadores existentes
-    Object.values(deliveryMarkers).forEach(marker => {
-        if (marker.map) {
-            marker.map = null; // Remove do mapa
+    // Preparar todos os pontos de entrega (apenas uma vez)
+    allDeliveryPoints = Object.entries(addressDatabase).map(([qrCode, data]) => ({
+        qrCode,
+        position: { lat: data.latitude, lng: data.longitude },
+        address: data.address
+    }));
+
+    console.log(`📍 ${allDeliveryPoints.length} pontos de entrega preparados`);
+
+    // Criar marcadores apenas quando necessário (zoom perto)
+    // Listener para atualizar marcadores quando mover/zoom o mapa
+    google.maps.event.addListener(map, 'idle', updateVisibleMarkers);
+
+    // Renderizar marcadores iniciais
+    updateVisibleMarkers();
+}
+
+// Atualizar marcadores baseado no viewport e zoom atual
+function updateVisibleMarkers() {
+    // Debounce para evitar atualizações muito frequentes
+    if (updateMarkersTimeout) {
+        clearTimeout(updateMarkersTimeout);
+    }
+
+    updateMarkersTimeout = setTimeout(() => {
+        const zoom = map.getZoom();
+        const bounds = map.getBounds();
+
+        if (!bounds) return;
+
+        // REGRA: Só mostrar marcadores quando zoom >= 14 (próximo)
+        // De longe (zoom < 14): apenas rota
+        // De perto (zoom >= 14): rota + marcadores na viewport
+        if (zoom < 14) {
+            // Zoom distante: remover todos os marcadores
+            clearVisibleMarkers();
+            console.log('🔭 Zoom distante: marcadores ocultados');
+            return;
         }
-    });
-    deliveryMarkers = {};
 
-    // Adicionar marcador para cada endereço no banco de dados
-    Object.entries(addressDatabase).forEach(([qrCode, data]) => {
-        const position = {
-            lat: data.latitude,
-            lng: data.longitude
-        };
+        // Zoom perto: mostrar marcadores na viewport
+        const pointsInView = allDeliveryPoints.filter(point =>
+            bounds.contains(point.position)
+        );
 
-        // Criar elemento do marcador (pacote/caixa)
-        const markerDiv = document.createElement('div');
-        markerDiv.style.width = '30px';
-        markerDiv.style.height = '30px';
-        markerDiv.style.background = '#ea4335';
-        markerDiv.style.border = '2px solid white';
-        markerDiv.style.borderRadius = '4px';
-        markerDiv.style.boxShadow = '0 2px 6px rgba(0,0,0,0.4)';
-        markerDiv.style.display = 'flex';
-        markerDiv.style.alignItems = 'center';
-        markerDiv.style.justifyContent = 'center';
-        markerDiv.style.fontSize = '16px';
-        markerDiv.innerHTML = '📦';
-        markerDiv.style.cursor = 'pointer';
-        markerDiv.style.transition = 'transform 0.2s';
+        // Limitar quantidade para performance (máximo 30 marcadores simultâneos)
+        const pointsToShow = pointsInView.slice(0, 30);
 
-        markerDiv.addEventListener('mouseenter', () => {
-            markerDiv.style.transform = 'scale(1.2)';
-        });
-        markerDiv.addEventListener('mouseleave', () => {
-            markerDiv.style.transform = 'scale(1)';
-        });
+        // Verificar quais já existem e quais precisam ser criados/removidos
+        updateMarkerSet(pointsToShow);
 
-        try {
-            // Criar marcador usando AdvancedMarkerElement (se disponível) ou Marker clássico
-            if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
-                const marker = new google.maps.marker.AdvancedMarkerElement({
-                    map,
-                    position,
-                    content: markerDiv,
-                    title: data.address.split('\n')[0] // Primeira linha do endereço
-                });
+        console.log(`📍 Marcadores visíveis: ${visibleMarkers.length}/${allDeliveryPoints.length} (zoom: ${zoom.toFixed(1)})`);
+    }, 200); // Aguardar 200ms após parar de mover
+}
 
-                // Adicionar listener de clique no marcador
-                marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
+// Atualizar conjunto de marcadores (adicionar novos, remover antigos)
+function updateMarkerSet(newPoints) {
+    const newPointsMap = new Map(newPoints.map(p => [p.qrCode, p]));
+    const currentPointsMap = new Map(visibleMarkers.map(m => [m.qrCode, m]));
 
-                    showToast(
-                        '📦 Pacote',
-                        data.address,
-                        'info',
-                        5000
-                    );
-                });
-
-                deliveryMarkers[qrCode] = marker;
-            } else {
-                // Fallback: usar Marker clássico com ícone personalizado
-                const marker = new google.maps.Marker({
-                    map,
-                    position,
-                    title: data.address.split('\n')[0],
-                    icon: {
-                        path: google.maps.SymbolPath.CIRCLE,
-                        fillColor: '#ea4335',
-                        fillOpacity: 1,
-                        strokeColor: '#ffffff',
-                        strokeWeight: 2,
-                        scale: 10
-                    },
-                    label: {
-                        text: '📦',
-                        color: '#ffffff',
-                        fontSize: '14px'
-                    }
-                });
-
-                // Adicionar listener de clique
-                marker.addListener('click', () => {
-                    map.setCenter(position);
-                    map.setZoom(18);
-
-                    showToast(
-                        '📦 Pacote',
-                        data.address,
-                        'info',
-                        5000
-                    );
-                });
-
-                deliveryMarkers[qrCode] = marker;
-            }
-        } catch (error) {
-            console.error('Erro ao criar marcador de entrega:', error);
+    // Remover marcadores que não estão mais visíveis
+    visibleMarkers = visibleMarkers.filter(marker => {
+        if (!newPointsMap.has(marker.qrCode)) {
+            // Remover do mapa
+            marker.marker.map = null;
+            return false;
         }
+        return true;
     });
 
-    console.log(`${Object.keys(deliveryMarkers).length} marcadores de entrega adicionados`);
+    // Adicionar novos marcadores que ainda não existem
+    newPoints.forEach(point => {
+        if (!currentPointsMap.has(point.qrCode)) {
+            createLightweightMarker(point);
+        }
+    });
+}
+
+// Criar marcador ultra-leve (círculo SVG simples)
+function createLightweightMarker(point) {
+    // Criar círculo SVG leve (muito mais rápido que AdvancedMarkerElement com HTML)
+    const circle = new google.maps.Circle({
+        map: map,
+        center: point.position,
+        radius: 15, // 15 metros de raio (visível mas pequeno)
+        fillColor: '#ea4335',
+        fillOpacity: 0.8,
+        strokeColor: '#ffffff',
+        strokeWeight: 2,
+        strokeOpacity: 1,
+        clickable: true,
+        zIndex: 100
+    });
+
+    // InfoWindow para mostrar endereço ao clicar
+    const infoWindow = new google.maps.InfoWindow({
+        content: `
+            <div style="padding: 8px; max-width: 250px;">
+                <div style="font-weight: 600; margin-bottom: 4px;">📦 Ponto de Entrega</div>
+                <div style="font-size: 13px; color: #666;">${point.address}</div>
+            </div>
+        `
+    });
+
+    // Mostrar info ao clicar
+    circle.addListener('click', () => {
+        infoWindow.setPosition(point.position);
+        infoWindow.open(map);
+    });
+
+    // Armazenar referência
+    visibleMarkers.push({
+        qrCode: point.qrCode,
+        marker: circle,
+        infoWindow: infoWindow
+    });
+}
+
+// Limpar todos os marcadores visíveis
+function clearVisibleMarkers() {
+    visibleMarkers.forEach(marker => {
+        marker.marker.map = null;
+        marker.infoWindow.close();
+    });
+    visibleMarkers = [];
 }
 
 // ===========================
@@ -2910,6 +2941,12 @@ function activateRouteMode() {
     routeMode = true;
     btnToggleRoute.classList.add('active');
 
+    // Adicionar marcadores quando ativar modo de rota (se ainda não existirem)
+    if (Object.keys(deliveryMarkers).length === 0) {
+        console.log('⚡ Adicionando marcadores de entrega...');
+        addDeliveryMarkers();
+    }
+
     // Obter posição atual do usuário
     let currentPosition;
     if (userLocationMarker) {
@@ -2952,9 +2989,13 @@ function deactivateRouteMode() {
         window.routePolylines = [];
     }
 
+    // Limpar marcadores visíveis
+    clearVisibleMarkers();
+    console.log('🗑️ Limpando rota e marcadores');
+
     showToast(
         'Modo de rota desativado',
-        'Marcadores de entrega restaurados',
+        'Mapa restaurado (marcadores removidos)',
         'info',
         2000
     );
